samples/_failures_safe/1761430583_52b6e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ddfa206.c: In function ‘calculate_bounds’:
./samples/SAFE/__tmp_1ddfa206.c:137:9: error: expected expression at end of input
  137 |         if (mesh->vertices[i].x < bounds.min.x) bounds.min.x =
      |         ^~
./samples/SAFE/__tmp_1ddfa206.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1ddfa206.c:137:9: error: expected declaration or statement at end of input
